# vonage-to-matrix

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.toml.template  docker-compose.yml
.github/workflows/: rust.yml
charts/vonage-to-matrix/: Chart.yaml  config.toml.template
charts/vonage-to-matrix/templates/: _helpers.tpl  config-maps.yaml  deployments.yaml  services.yaml
hookshot/: Cargo.toml
hookshot/src/: lib.rs
k8s/: config-maps.yaml  deployments.yaml  ingresses.yaml  kustomization.yaml  namespace.yaml  services.yaml
matrix-hookshot-rust/: Cargo.toml
matrix-hookshot-rust/src/: lib.rs
src/: main.rs
src/rest/: mod.rs
tests/: integration_test.rs
vonage/: Cargo.toml
vonage-rust/: Cargo.toml
vonage-to-matrix/: Cargo.toml  docker-compose.yml
vonage-to-matrix/src/rest/: mod.rs
vonage/src/: lib.rs
